fixed spacing of tabsheader margin

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -55,12 +55,12 @@ h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: lighter;
   font-size: 200px;
-  /* letter-spacing: 70px;
+  letter-spacing: 70px;
   margin-block-start: 0.67em;
   margin-block-start: 1em;
   margin-block-end: -.3em;
   margin-inline-start: -200px;
-  margin-inline-end: 0px; */
+  margin-inline-end: 0px;
 }
 
 a {
